# android_uvc_camera

./: README.md  build.gradle  config.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/android/camera/uvc/demo/: MainActivity.java
app/src/main/res/values/: strings.xml
camera_uvc/: build.gradle  consumer-rules.pro
camera_uvc/src/main/: AndroidManifest.xml
camera_uvc/src/main/cpp/: CMakeLists.txt
camera_uvc/src/main/cpp/libjpeg-turbo/: CMakeLists.txt
camera_uvc/src/main/cpp/libusb/: CMakeLists.txt
camera_uvc/src/main/cpp/libuvc/: CMakeLists.txt
camera_uvc/src/main/cpp/libyuv/: CMakeLists.txt
camera_uvc/src/main/cpp/source/: camera_device.cpp  camera_device.h  camera_device_jni.cpp  camera_uvc.cpp  camera_uvc_jni.cpp  common.hpp  frame_callback.cpp  frame_callback.h  frame_converter.cpp  frame_converter.h  frame_decoder.cpp  frame_decoder.h  frame_encoder.cpp  frame_encoder.h  frame_queue.cpp  frame_queue.h  frame_viewer.cpp  frame_viewer.h
camera_uvc/src/main/java/android/camera/uvc/: CameraDevice.java  CameraManager.java  SupportInfo.java
gradle/wrapper/: gradle-wrapper.properties
